--- a/src/app/main/pages/cashier/component/section-payment-order/payment-order.component.html
+++ b/src/app/main/pages/cashier/component/section-payment-order/payment-order.component.html
@@ -131,6 +131,7 @@
                             class="col text-end f-super-bold title-e">{{
                             checkoutRepo.checkout.deposit | rupiah
                             }}</span>
+                        <mat-icon svgIcon="x" (click)="clearDeposit()"></mat-icon>
                     </div>
                 </div>
 
