--- a/src/styles.css
+++ b/src/styles.css
@@ -650,6 +650,11 @@ a {
   background-color: rgb(4 91 98 / 35%);
 }
 
+.mat-form-field-prefix,
+.mat-form-field-suffix {
+  position: initial !important;
+}
+
 /* ============= */
 /*    LOADING    */
 /* ============= */
