--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -18,6 +18,7 @@
 .bg-greys {
   background: #e8e8e8;
   /* background: url("../../assets/images/login-reference.png"); */
+  box-shadow: 0px 0px 18px rgba(166, 166, 166, 0.16);
 }
 
 .img-login {
@@ -26,11 +27,31 @@
 }
 
 .text-title-login {
+  text-align: start !important;
+  font-weight: 700 !important;
+  font-style: normal !important;
+  font-weight: 800 !important;
+  line-height: 33px;
+  color: #1e1e1e;
+  margin-bottom: 0px !important;
+}
+
+.text-white {
+  color: #fff !important;
+}
+
+.text-sub-login {
   text-align: start;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 600;
+  color: #f2ffff !important;
 }
 
 .left {
   background: #fff;
   height: 100vh;
+}
+
+.right {
+  background: #045b62;
 }
