--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -7,7 +7,8 @@
                     <div>
                         <img class="img-title" src="assets/images/sm_logo.png" alt="logo-siangmalam">
                     </div>
-                    <mat-card-title class="text-title"> {{ isLoading? 'Tunggu sebentar ya...' : 'Kasir Login'}}
+                    <mat-card-title class="text-title text-title-login"> {{ isLoading? 'Tunggu sebentar ya...' : 'Kasir
+                        Login'}}
                     </mat-card-title>
                     <mat-card-content>
                         <form-apps (onSubmit)="onSubmitData($event)" [submitName]="'Masuk'" [isLoading]="isLoading"
@@ -34,13 +35,12 @@
 
             </div>
         </div>
-        <div class="col">
+        <div class="col right">
             <div class="image-container">
                 <!-- <mat-icon class="illustration" svgIcon="login"></mat-icon> -->
                 <div>
-                    <h1 class="text-title-login">Pekerjaan Kasir Akan Lebih Mudah Apabila di Kerjakan Menggunakan
-                        Aplikasi
-                        RM. Siang Malam</h1>
+                    <h1 class="text-title-login text-white">RM. Siang Malam</h1>
+                    <p class="text-start text-sub-login">Kasir Management Shift V.2</p>
                     <img class="img-login illustration" src="assets/images/login-reference.png" alt="">
                 </div>
             </div>
