--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
+    <button (click)="testRefresh()">Test Refresh</button>
+
+
     <div class="d-flex h-inherit">
         <div class="col-5">
             <div class="user d-flex justify-content-center">
