--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,5 @@
 <div class="container-fluid">
-    <button (click)="testRefresh()">Test Refresh</button>
-
-
+    <!-- <button (click)="testRefresh()">Test Refresh</button> -->
     <div class="d-flex h-inherit">
         <div class="col-5">
             <div class="user d-flex justify-content-center">
@@ -17,27 +15,5 @@
             </div>
         </div>
     </div>
-    <!-- Panel Shift -->
-    <!-- <div class="shift d-flex justify-content-center" style="height: 30vh;">
-        <div class="card-shift">
-            <shift-card-app class="w-100" [shift]="shift"></shift-card-app>
-        </div>
-    </div> -->
-    <!-- Panel User -->
-    <!-- <div class="user d-flex justify-content-center" style="height: 80vh;">
-        <user-apps [user]="user"></user-apps>
-    </div> -->
-    <!-- Panel Button Route -->
-    <!-- <div class="page d-flex justify-content-center" style="height: auto;">
-        <div class="card-choose">
-            <button-card class="w-100"></button-card>
-        </div>
-    </div> -->
-    <!-- Card Logout -->
-    <!-- <div class="input d-flex justify-content-center" style="height: auto;">
-        <div mat-button class="card-button d-flex align-items-center font-weight-bold" (click)="logout()">
-            <mat-icon>logout</mat-icon>
-            <p class="w-100 mx-2 my-0 text-center">KELUAR</p>
-        </div>
-    </div> -->
+
 </div>
